# werio

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: main.rs  weather.rs
