[package]
name = "werio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
reqwest = { version = "0.11.22", features = ["blocking", "cookies"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.109"